# quick-notes

./: .gitignore  Cargo.toml  focus-quick-notes.sh
src/: main.rs
