[package]
name = "quick-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14" }
iced_plus_platform = { version = "0.1", features = ["full", "tray", "notifications", "hotkeys", "window"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
once_cell = "1"
single-instance = "0.2"
uuid = { version = "1", features = ["v4"] }